[package]
name = "octane"
version = "0.1.1"
authors = ["weegee <somilsharma627@gmail.com>", "aplet123 <aplet@aplet.me>"]
description = "A web server built from the ground up."
license-file = "LICENSE"
homepage = "https://github.com/OctaneWeb/Octane"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rustls = { version = "0.17.0", optional = true }
tokio = { version = "0.2.21", features = ["tcp", "fs", "stream", "macros", "io-util"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dependencies.octane_macros]
path = "octane_macros"
version = "0.1.1"

[dependencies.octane_json]
path = "octane_json"
version = "0.1.0"

[features]
default = ["faithful", "query_strings", "cookies", "url_variables", "raw_headers"]
faithful = []
raw_headers = []
query_strings = []
extended_queries = []
cookies = []
url_variables = []
https = ["rustls"]

[workspace]
members = [
    "octane_macros",
    "octane_json"
]
