[package]
name = "octane"
version = "0.1.2"
authors = ["weegee <somilsharma627@gmail.com>", "aplet123 <aplet@aplet.me>"]
description = "A web server which is express-like, intuitive and high-powered"
license-file = "LICENSE"
homepage = "https://github.com/OctaneWeb/Octane"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
tokio-rustls = { version = "0.14.0", optional = true }
openssl = { version = "0.10.30", optional = true }
tokio-openssl = { version = "0.4", optional = true }
tokio = { version = "0.2.22", features = ["tcp", "io-util", "stream", "rt-threaded"] }

[dependencies.octane_macros]
path = "octane_macros"
version = "0.1.2"

[dependencies.octane_json]
path = "octane_json"
version = "0.2.0"

[features]
default = ["faithful", "query_strings", "cookies", "url_variables", "raw_headers"]
faithful = []
raw_headers = []
query_strings = []
extended_queries = []
cookies = []
url_variables = []
rustls = ["tokio-rustls"]
openSSL = ["openssl", "tokio-openssl"]

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["rustls-tls"] }
tokio = { version = "0.2.22", features = ["full"] }
curl = "0.4.33"

[workspace]
members = [
    "octane_macros",
    "octane_json"
]
