[package]
name = "octane_http"
version = "0.1.0"
authors = ["Daksh14 <41485688+Daksh14@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.octane_macros]
path = "../octane_macros"
version = "0.1.2"

[dependencies]
tokio = { version = "0.3", features = ["net", "io-util", "stream", "rt-multi-thread"] }

