[package]
name = "octane_http"
version = "0.1.0"
authors = ["Daksh14 <41485688+Daksh14@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.octane_macros]
path = "../octane_macros"
version = "0.1.2"

[dependencies]
tokio = { version = "1.9.0", features = ["net", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
socket2 = "0.4.0"
futures = "0.3.16"
simdutf8 = { version = "0.1.4", features = ["aarch64_neon"] }
headers = "0.3.7"
http = "0.2.7"
tracing = "0.1.35"
bytes = "1.1.0"
