[package]
name = "octane_json"
version = "0.2.0"
authors = ["weegee <somilsharma627@gmail.com>", "aplet123 <aplet@aplet.me>"]
description = "JSON manipulation for Octane."
license-file = "LICENSE"
homepage = "https://github.com/OctaneWeb/Octane"
readme = "README.md"
edition = "2018"

[dependencies]
[dependencies.octane_macros]
path = "../octane_macros"
version = "0.1.2"
