[package]
name = "octane_macros"
version = "0.1.0"
authors = ["weegee <somilsharma627@gmail.com>", "aplet123 <aplet@aplet.me>"]
description = "Procedural macros for Octane."
license-file = "LICENSE"
homepage = "https://github.com/OctaneWeb/Octane"
readme = "README.md"
edition = "2018"

[dependencies]
quote = "1.0.6"

[lib]
proc-macro = true
